# rust-microservice

./: .gitignore  Cargo.toml
crm/: Cargo.toml  build.rs  rpc.proto
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: main.rs
crm-send/: Cargo.toml  README.md  build.rs  rpc.proto  send_notification.proto
crm-send/src/: lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
user-stat/: .env  Cargo.toml  README.md  build.rs  rpc.proto
user-stat/client/: README.md  main.rs
user-stat/examples/: gen.rs
user-stat/migrations/: 20240908230124_init.sql
user-stat/src/: lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
