[workspace]
members = ["crm", "crm-metadata", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
futures = "0.3.30"
prost = "0.12.4"
prost-types = "0.12.4"
proto-builder-trait = "0.6.1"
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tonic-build = "0.11.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
