[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
jwt-simple = "0.12.9"
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }