[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
rng = "0.1.0"
rand = "0.8.5"
nanoid = "0.4.0"
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }