[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
jwt-simple = "0.12.9"
sqlx = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
fake = { version="2.9.2", features=["derive", "chrono"]}
